--- a/src/main.css
+++ b/src/main.css
@@ -136,3 +136,42 @@ dialog::backdrop {
     padding: 1px;
   }
 }
+
+.profile-button {
+  @apply transition-colors;
+  @apply duration-75;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 8px;
+
+  width: 100%;
+  padding: 11px;
+  border-radius: 10px;
+  text-overflow: ellipsis;
+
+  background-color: theme(colors.abru.dark.29);
+  color: theme(colors.abru.light.75);
+  text-align: left;
+
+  @media screen(lg) {
+    width: 300px;
+  }
+
+  &:hover {
+    background-color: lighten(theme(colors.abru.dark.29), 2%);
+  }
+
+  &:active {
+    background-color: theme(colors.abru.dark.29);
+  }
+}
+
+.divider {
+  width: 236px;
+  height: 1px;
+  align-self: center;
+  background-color: theme(colors.abru.light.5);
+}
