feat: leave queue

--- a/src/queue/views/queue.css
+++ b/src/queue/views/queue.css
@@ -34,5 +34,23 @@
     &.ready {
       background-color: #0a955b;
     }
+
+    .leave-queue-button {
+      display: flex;
+      flex: 1 1 0%;
+      align-items: center;
+      justify-content: center;
+
+      height: 34px;
+      width: 34px;
+      border-radius: 4px;
+
+      background-color: theme(colors.abru.light.30);
+      color: theme(colors.white);
+
+      &:hover {
+        background-color: theme(colors.abru.light.35);
+      }
+    }
   }
 }
