--- a/src/queue/views/html/queue.css
+++ b/src/queue/views/html/queue.css
@@ -54,3 +54,31 @@
     background-color: #0a955b;
   }
 }
+
+.map-vote-button {
+  position: relative;
+  flex: 1 1 0%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  overflow: hidden;
+  border-radius: 8px;
+  padding: 13px;
+
+  aspect-ratio: 3 / 1;
+
+  background: theme(colors.abru.light.25);
+  background: linear-gradient(
+    90deg,
+    theme(colors.abru.light.25) 35%,
+    theme(colors.transparent) 90%
+  );
+
+  &:hover:enabled {
+    background: linear-gradient(
+      90deg,
+      lighten(theme(colors.abru.light.25), 3%) 35%,
+      theme(colors.transparent) 90%
+    );
+  }
+}
