--- a/src/queue/views/html/queue.css
+++ b/src/queue/views/html/queue.css
@@ -18,7 +18,7 @@
     background-color: theme(colors.abru.light.30);
     color: theme(colors.abru.light.30);
 
-    &:hover {
+    &:hover:enabled {
       background-color: theme(colors.abru.light.25);
       color: theme(colors.abru.light.60);
     }
@@ -37,7 +37,7 @@
     background-color: theme(colors.abru.light.30);
     color: theme(colors.white);
 
-    &:hover {
+    &:hover:enabled {
       background-color: theme(colors.abru.light.35);
     }
   }
