--- a/src/main.css
+++ b/src/main.css
@@ -127,6 +127,27 @@ dialog::backdrop {
   }
 }
 
+.profile-menu-item {
+  @apply transition-colors;
+  @apply duration-75;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 14px 24px;
+  border-radius: 0.5rem /* 8px */;
+  background-color: theme('colors.abru.dark.29');
+  gap: 0.5rem /* 8px */;
+
+  &--accent {
+    color: theme(colors.accent.600);
+  }
+
+  &:hover {
+    background-color: lighten(theme('colors.abru.dark.29'), 2%);
+  }
+}
+
 .steam-button {
   background-color: theme(colors.steam);
   color: #ffffff;
