feat: player page initial

--- a/src/players/views/html/style.css
+++ b/src/players/views/html/style.css
@@ -1,3 +1,28 @@
 .player-group {
   grid-template-columns: subgrid;
 }
+
+.player-presentation-link {
+  @apply transition-colors;
+  @apply duration-75;
+
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+
+  background-color: theme(colors.abru.light.3);
+  color: theme(colors.abru.light.75);
+
+  border-radius: 4px;
+  padding: 12px 32px;
+
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+
+  &:hover {
+    background-color: lighten(theme(colors.abru.light.3), 2%);
+  }
+}
