--- a/src/main.css
+++ b/src/main.css
@@ -23,6 +23,12 @@ body {
   }
 }
 
+footer {
+  a:hover {
+    text-decoration: underline;
+  }
+}
+
 dialog::backdrop {
   background: theme(colors.abru.dark.3 / 50%);
   backdrop-filter: blur(1px);
