--- a/src/queue/views/html/queue.css
+++ b/src/queue/views/html/queue.css
@@ -82,3 +82,45 @@
     );
   }
 }
+
+.online-player-list {
+  display: flex;
+  flex-flow: column nowrap;
+  height: 100%;
+  border-radius: 8px;
+  background-color: theme(colors.abru.dark.6);
+  padding: 8px;
+
+  h6 {
+    margin: 10px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+    color: theme(colors.abru.light.75);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  .item {
+    color: theme(colors.abru.light.75);
+    border-radius: 2px;
+    padding: 4px 8px;
+    font-weight: 300;
+
+    &:nth-child(even) {
+      background-color: theme(colors.abru.dark.6);
+    }
+
+    &:nth-child(odd) {
+      background-color: theme(colors.abru.light.5);
+    }
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
