--- a/src/games/views/html/style.css
+++ b/src/games/views/html/style.css
@@ -72,6 +72,34 @@
   border-radius: 0 0 8px 8px;
   background-color: rgb(0 0 0 / 0.4);
   padding: 10px;
+
+  .slot {
+    @apply transition-colors;
+    @apply duration-75;
+
+    display: flex;
+    background-color: theme(colors.abru.light.75);
+    align-items: center;
+    gap: 10px;
+    border-radius: 4px;
+    padding: 10px;
+
+    &:hover {
+      background-color: theme(colors.abru.light.70);
+    }
+
+    .connected {
+      background-color: #0a955b;
+    }
+
+    .joining {
+      background-color: #d9861a;
+    }
+
+    .offline {
+      background-color: #b80c4d;
+    }
+  }
 }
 
 .game-list {
