--- a/src/main.css
+++ b/src/main.css
@@ -55,6 +55,7 @@ dialog::backdrop {
   color: theme(colors.ash);
 
   background-color: theme(colors.abru.light.15);
+
   &:hover {
     background-color: darken(theme(colors.abru.light.15), 5%);
   }
@@ -69,10 +70,25 @@ dialog::backdrop {
     }
   }
 
+  &--dense {
+    padding: 5px 28px;
+    font-size: 16px;
+    line-height: 22px;
+  }
+
   &--accent {
     background-color: theme(colors.accent.DEFAULT);
     &:hover {
       background-color: darken(theme(colors.accent.DEFAULT), 10%);
+    }
+  }
+
+  &--alert {
+    background-color: theme(colors.abru.DEFAULT);
+    color: theme(colors.alert);
+
+    &:hover {
+      background-color: lighten(theme(colors.abru.DEFAULT), 4%);
     }
   }
 }
@@ -94,6 +110,11 @@ dialog::backdrop {
   &--warning {
     background-color: theme(colors.accent.600);
     color: theme(colors.abru.dark.3);
+  }
+
+  &--alert {
+    background-color: theme(colors.alert);
+    color: theme(colors.abru.light.3);
   }
 }
 
