--- a/src/games/views/html/style.css
+++ b/src/games/views/html/style.css
@@ -198,3 +198,28 @@
     }
   }
 }
+
+.admin-action-button {
+  @apply transition-colors;
+  @apply duration-75;
+
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+
+  padding: 12px 24px;
+  font-size: 16px;
+  line-height: normal;
+  font-weight: 700;
+  border-radius: 4px;
+
+  color: theme(colors.ash);
+
+  background-color: theme(colors.abru.dark.29);
+
+  &:hover {
+    background-color: lighten(theme('colors.abru.dark.29'), 2%);
+  }
+}
