--- a/src/main.css
+++ b/src/main.css
@@ -425,11 +425,24 @@ dialog::backdrop {
   background-color: transparent;
 }
 
+.admin-panel-section {
+  font-size: 14px;
+  color: theme(colors.abru.light.50);
+  font-weight: 500;
+  padding: 8px 12px;
+
+  &:not(:first-child) {
+    border-top: 1px solid theme(colors.abru.light.25);
+    padding-top: 16px;
+    margin-top: 8px;
+  }
+}
+
 .admin-panel-link {
   display: flex;
   flex-flow: flex nowrap;
   align-items: center;
-  gap: 4px;
+  gap: 8px;
   color: theme(colors.abru.light.75);
   font-weight: 500;
   font-size: 18px;
@@ -493,6 +506,44 @@ dialog::backdrop {
   }
 }
 
+table,
+.table {
+  thead,
+  .table-header-group {
+    color: theme(colors.abru.light.75);
+  }
+
+  td,
+  .table-cell {
+    padding: 2px;
+  }
+}
+
+label {
+  font-weight: 600;
+  color: theme(colors.abru.light.75);
+}
+
+dl {
+  dt {
+    margin-bottom: 4px;
+  }
+}
+
+input[type='text'],
+input[type='number'],
+select,
+textarea {
+  background-color: theme(colors.abru.light.5);
+  border-radius: 4px;
+  padding: 4px 8px;
+  color: #ffffff;
+
+  &:disabled {
+    color: theme(colors.abru.light.50);
+  }
+}
+
 input[type='range'] {
   appearance: none;
   background: transparent;
@@ -544,4 +595,50 @@ input[type='range'] {
     background-color: theme('colors.abru.light.5');
     border-radius: 4px;
   }
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 47px;
+  height: 24px;
+
+  input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: theme(colors.abru.light.20);
+  transition: 0.4s;
+  border-radius: 34px;
+
+  &:before {
+    position: absolute;
+    content: '';
+    height: 18px;
+    width: 18px;
+    left: 3px;
+    top: 3px;
+    background-color: theme(colors.abru.dark.25);
+    transition: 0.4s;
+    border-radius: 50%;
+    z-index: 20;
+  }
+}
+
+input:checked + .slider {
+  background-color: theme(colors.accent.DEFAULT);
+}
+
+input:checked + .slider:before {
+  transform: translateX(23px);
 }
