feat: twitch.tv integration initial

--- a/src/queue/views/html/queue.css
+++ b/src/queue/views/html/queue.css
@@ -161,3 +161,14 @@
     }
   }
 }
+
+.stream-link {
+  @apply transition-colors;
+  @apply duration-75;
+
+  background-color: theme(colors.abru.light.15);
+
+  &:hover {
+    background-color: lighten(theme(colors.abru.light.15), 4%);
+  }
+}
