--- a/src/queue/views/html/queue.page.css
+++ b/src/queue/views/html/queue.page.css
@@ -28,66 +28,109 @@
     }
   }
 
-  .leave-queue-button {
-    @apply transition-colors;
-    @apply duration-75;
-
-    display: flex;
-    flex: 1 1 0%;
+  .player-info {
+    padding: 8px;
+    flex: 1;
+    display: grid;
+    grid-template-columns: 42px 1fr 42px;
     align-items: center;
-    justify-content: center;
-
-    height: 34px;
-    width: 34px;
-    border-radius: 4px;
-
-    background-color: theme(colors.abru.light.30);
-    color: theme(colors.white);
-
-    &:hover:enabled {
-      background-color: theme(colors.abru.light.35);
-    }
-  }
-
-  .mark-as-friend-button {
-    @apply transition-colors;
-    @apply duration-75;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    height: 34px;
-    width: 34px;
-
-    border-radius: 4px;
-
-    color: theme(colors.black);
-    background-color: theme(colors.abru.light.75);
-
-    &:disabled {
-      color: theme(colors.abru.light.60);
-    }
-
-    &:hover {
-      background-color: theme(colors.abru.light.70);
-    }
-
-    &.selected {
-      color: theme(colors.accent.600);
-    }
-  }
-
-  .taken {
     background-color: theme(colors.abru.light.60);
-  }
 
-  .my-slot {
-    background-color: theme(colors.abru.light.75);
-  }
+    img {
+      border-radius: 4px;
+    }
 
-  .ready {
-    background-color: #0a955b;
+    a {
+      flex-grow: 1;
+      overflow: hidden;
+      white-space: nowrap;
+      text-align: center;
+      font-size: 20px;
+      font-weight: 700;
+      color: theme(colors.abru.dark.3);
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+    &:has(.leave-queue-button) {
+      background-color: theme(colors.abru.light.75);
+    }
+
+    &[data-player-ready='true'] {
+      background-color: #0a955b;
+    }
+
+    .leave-queue-button {
+      @apply transition-colors;
+      @apply duration-75;
+
+      display: flex;
+      flex: 1 1 0%;
+      align-items: center;
+      justify-content: center;
+
+      height: 34px;
+      width: 34px;
+      border-radius: 4px;
+
+      background-color: theme(colors.abru.light.30);
+      color: theme(colors.white);
+
+      &:hover:enabled {
+        background-color: theme(colors.abru.light.35);
+      }
+    }
+
+    .mark-as-friend-button {
+      display: block;
+      position: relative;
+      cursor: pointer;
+      user-select: none;
+
+      height: 34px;
+      width: 34px;
+
+      input[type='checkbox'] {
+        appearance: none;
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 4px;
+        overflow: hidden;
+      }
+
+      .mark {
+        @apply transition-colors;
+        @apply duration-75;
+
+        color: theme(colors.abru.dark.20);
+        background-color: theme(colors.abru.light.75);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        border-radius: 4px;
+
+        &:hover {
+          background-color: theme(colors.abru.light.70);
+        }
+      }
+
+      input:checked ~ .mark {
+        color: theme(colors.accent.600);
+      }
+
+      input:disabled ~ .mark {
+        color: theme(colors.abru.light.60);
+      }
+    }
   }
 }
 
