--- a/src/html/styles/flash-messages.css
+++ b/src/html/styles/flash-messages.css
@@ -13,10 +13,6 @@
       flex-direction: column;
       padding: 0;
 
-      &.success {
-        background-color: #0a955b;
-      }
-
       .content {
         display: flex;
         flex-flow: row nowrap;
@@ -35,18 +31,45 @@
         border-radius: 0 0 4px 4px;
         width: 640px;
         height: 4px;
-        background-color: #087749;
+      }
 
-        &::-webkit-progress-bar {
-          background: #087749;
+      &.success {
+        background-color: #0a955b;
+
+        progress[value] {
+          background-color: #087749;
+
+          &::-webkit-progress-bar {
+            background: #087749;
+          }
+
+          &::-webkit-progress-value {
+            background: #5db08d;
+          }
+
+          &::-moz-progress-bar {
+            background: #5db08d;
+          }
         }
+      }
 
-        &::-webkit-progress-value {
-          background: #5db08d;
-        }
+      &.error {
+        background-color: #950a0a;
 
-        &::-moz-progress-bar {
-          background: #5db08d;
+        progress[value] {
+          background-color: #770808;
+
+          &::-webkit-progress-bar {
+            background: #770808;
+          }
+
+          &::-webkit-progress-value {
+            background: #b05d5d;
+          }
+
+          &::-moz-progress-bar {
+            background: #b05d5d;
+          }
         }
       }
     }
