fix: render twitch.tv profile link

--- a/src/players/views/html/style.css
+++ b/src/players/views/html/style.css
@@ -20,6 +20,7 @@
     grid-template-columns: 218px auto auto;
     justify-items: normal;
     row-gap: 10px;
+    padding-right: 40px;
   }
 
   .player-avatar {
