--- a/src/queue/views/html/queue.page.css
+++ b/src/queue/views/html/queue.page.css
@@ -44,11 +44,13 @@
     a {
       flex-grow: 1;
       overflow: hidden;
+      text-overflow: ellipsis;
       white-space: nowrap;
       text-align: center;
       font-size: 20px;
       font-weight: 700;
       color: theme(colors.abru.dark.3);
+      margin: 0 4px;
 
       &:hover {
         text-decoration: underline;
