--- a/src/players/views/html/style.css
+++ b/src/players/views/html/style.css
@@ -82,21 +82,74 @@
   }
 }
 
-.player-skill {
-  display: flex;
-  flex-flow: row nowrap;
-  background-color: theme(colors.abru.light.5);
-  border-radius: 4px;
+.player-admin-toolbox {
+  display: grid;
+  grid-template-areas:
+    'captionSkill     captionSkill'
+    'skillScout       skillScout'
+    'skillSoldier     skillSoldier'
+    'skillDemoman     skillDemoman'
+    'skillMedic       skillMedic'
+    'buttonSave       buttonReset'
+    'captionWinLoss   captionWinLoss'
+    'winLoss          winLoss'
+    'linkEdit         linkEdit';
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 
-  img {
-    margin: 4px;
+  align-items: center;
+  column-gap: 8px;
+  row-gap: 8px;
+  border-radius: 8px;
+  background: theme(colors.abru.dark.29);
+  padding: 24px;
+
+  @media screen(md) {
+    grid-template-areas:
+      'captionSkill  captionSkill captionSkill captionSkill captionSkill captionSkill captionWinLoss  captionWinLoss  . linkEdit'
+      'skillScout    skillSoldier skillDemoman skillMedic   buttonSave   buttonReset  winLoss         winLoss         winLoss linkEdit';
+    grid-template-columns: repeat(9, minmax(0, 1fr)) auto;
   }
 
-  input {
-    text-align: center;
-    width: auto;
-    min-width: 20px;
-    background: transparent;
-    border: none;
+  .caption {
+    font-size: 18px;
+    font-weight: 700;
+    color: theme(colors.abru.light.75);
+  }
+
+  .player-skill {
+    display: flex;
+    flex-flow: row nowrap;
+    background-color: theme(colors.abru.light.5);
+    border-radius: 4px;
+
+    img {
+      margin: 4px;
+    }
+
+    input {
+      text-align: center;
+      width: auto;
+      min-width: 20px;
+      background: transparent;
+      border: none;
+    }
+  }
+
+  .game-result {
+    height: 24px;
+    width: 24px;
+    border-radius: 4px;
+
+    &.win {
+      background-color: theme(colors.game-result-win);
+    }
+
+    &.loss {
+      background-color: theme(colors.game-result-loss);
+    }
+
+    &.tie {
+      background-color: theme(colors.game-result-tie);
+    }
   }
 }
