--- a/src/html/styles/navigation-bar.css
+++ b/src/html/styles/navigation-bar.css
@@ -1,4 +1,90 @@
 @layer components {
+  .toggle-menu-button {
+    position: absolute;
+    top: calc(50% - 21px);
+    right: 16px;
+
+    color: theme(colors.abru.light.75);
+    z-index: 10;
+
+    @media screen(lg) {
+      display: none;
+    }
+  }
+
+  .logo {
+    position: absolute;
+    /* top: 16px; */
+    top: calc(50% - 22px);
+    left: 16px;
+    z-index: 10;
+
+    img {
+      height: 44px;
+    }
+
+    @media screen(lg) {
+      position: static;
+      margin-left: 4px;
+      margin-right: 4px;
+      align-self: center;
+    }
+  }
+
+  .menu-container {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+
+    clip-path: polygon(90% 6%, 92% 6%, 92% 7%, 90% 7%);
+    opacity: 0;
+    transition:
+      clip-path 400ms cubic-bezier(0.4, 0, 0.2, 1),
+      background-color 400ms cubic-bezier(0.4, 0, 0.2, 1),
+      opacity 400ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen(lg) {
+      position: static;
+      width: auto;
+      height: auto;
+
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 20px;
+      font-weight: 500;
+
+      clip-path: none;
+      opacity: 1;
+    }
+
+    &.active {
+      clip-path: polygon(100% 0%, 100% 100%, 0% 100%, 0% 0%);
+      opacity: 1;
+    }
+
+    .menu {
+      background: theme(colors.abru.dark.3);
+      width: 100%;
+      height: 100%;
+
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      padding: 95px 16px 0 16px;
+
+      @media screen(lg) {
+        background: none;
+
+        flex-direction: row;
+        align-items: center;
+        padding: 0;
+      }
+    }
+  }
+
   .menu-item {
     @apply transition-colors;
     @apply duration-75;
